ghc-6.2/hslibs/win32/Win32Window_stub_ffi.h

extern void* prim_setWindowText(HWND arg1,char * arg2);
extern int access_prim_setWindowText_gc_failed(HsPtr);
extern void* access_prim_setWindowText_gc_failstring(HsPtr);
extern DWORD prim_sizeofPAINTSTRUCT();
extern void* prim_beginPaint(HWND arg1,LPPAINTSTRUCT arg2);
extern HDC access_prim_beginPaint_res1(HsPtr);
extern int access_prim_beginPaint_gc_failed(HsPtr);
extern void* access_prim_beginPaint_gc_failstring(HsPtr);
extern void prim_endPaint(HWND arg1,LPPAINTSTRUCT arg2);
extern DWORD prim_sW_HIDE();
extern DWORD prim_sW_SHOWNORMAL();
extern DWORD prim_sW_SHOWMINIMIZED();
extern DWORD prim_sW_SHOWMAXIMIZED();
extern DWORD prim_sW_MAXIMIZE();
extern DWORD prim_sW_SHOWNOACTIVATE();
extern DWORD prim_sW_SHOW();
extern DWORD prim_sW_MINIMIZE();
extern DWORD prim_sW_SHOWMINNOACTIVE();
extern DWORD prim_sW_SHOWNA();
extern DWORD prim_sW_RESTORE();
extern int prim_showWindow(HWND arg1,DWORD arg2);
extern void* prim_adjustWindowRect(LONG gc_arg2,LONG gc_arg3,LONG gc_arg4,LONG gc_arg5,DWORD arg2,int arg3);
extern LONG access_prim_adjustWindowRect_gc_res1(HsPtr);
extern LONG access_prim_adjustWindowRect_gc_res2(HsPtr);
extern LONG access_prim_adjustWindowRect_gc_res3(HsPtr);
extern LONG access_prim_adjustWindowRect_gc_res4(HsPtr);
extern int access_prim_adjustWindowRect_gc_failed(HsPtr);
extern void* access_prim_adjustWindowRect_gc_failstring(HsPtr);
extern void* prim_adjustWindowRectEx(LONG gc_arg2,LONG gc_arg3,LONG gc_arg4,LONG gc_arg5,DWORD arg2,int arg3,DWORD arg4);
extern LONG access_prim_adjustWindowRectEx_gc_res1(HsPtr);
extern LONG access_prim_adjustWindowRectEx_gc_res2(HsPtr);
extern LONG access_prim_adjustWindowRectEx_gc_res3(HsPtr);
extern LONG access_prim_adjustWindowRectEx_gc_res4(HsPtr);
extern int access_prim_adjustWindowRectEx_gc_failed(HsPtr);
extern void* access_prim_adjustWindowRectEx_gc_failstring(HsPtr);
extern int prim_anyPopup();
extern void* prim_arrangeIconicWindows(HWND arg1);
extern int access_prim_arrangeIconicWindows_gc_failed(HsPtr);
extern void* access_prim_arrangeIconicWindows_gc_failstring(HsPtr);
extern void* prim_beginDeferWindowPos(int arg1);
extern HDWP access_prim_beginDeferWindowPos_res1(HsPtr);
extern int access_prim_beginDeferWindowPos_gc_failed(HsPtr);
extern void* access_prim_beginDeferWindowPos_gc_failstring(HsPtr);
extern void* prim_bringWindowToTop(HWND arg1);
extern int access_prim_bringWindowToTop_gc_failed(HsPtr);
extern void* access_prim_bringWindowToTop_gc_failstring(HsPtr);