ghc-6.2/hslibs/win32/Win32Window.hs


----------------------------------------------------------------
-- Setting window text/label
----------------------------------------------------------------
-- For setting the title bar text.  But inconvenient to make the LPCTSTR
setWindowText :: HWND -> String -> IO ()
setWindowText arg1 gc_arg1 =
  (marshall_string_ gc_arg1) >>= \ (arg2) ->
  prim_setWindowText arg1 arg2
  >>= \ gc_result ->
  access_prim_setWindowText_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setWindowText_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall "Win32Window_stub_ffi.h prim_setWindowText" prim_setWindowText :: Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_setWindowText_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_setWindowText_gc_failstring :: Addr -> IO (Addr)

----------------------------------------------------------------
-- Paint struct
----------------------------------------------------------------

type PAINTSTRUCT =
 ( HDC   -- hdc
 , Bool  -- fErase
 , RECT  -- rcPaint
 )

type LPPAINTSTRUCT   = Addr

foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sizeofPAINTSTRUCT" sizeofPAINTSTRUCT :: DWORD

beginPaint :: HWND -> LPPAINTSTRUCT -> IO HDC
beginPaint arg1 arg2 =
  prim_beginPaint arg1 arg2
  >>= \ gc_result ->
  access_prim_beginPaint_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_beginPaint_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_beginPaint_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall "Win32Window_stub_ffi.h prim_beginPaint" prim_beginPaint :: Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_beginPaint_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_beginPaint_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_beginPaint_gc_failstring :: Addr -> IO (Addr)

endPaint :: HWND -> LPPAINTSTRUCT -> IO ()
endPaint arg1 arg2 =
  prim_endPaint arg1 arg2
foreign import  ccall "Win32Window_stub_ffi.h prim_endPaint" prim_endPaint :: Addr -> Addr -> IO ()
-- Apparently always succeeds (return non-zero)

----------------------------------------------------------------
-- ShowWindow
----------------------------------------------------------------

type ShowWindowControl   = DWORD

foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sW_HIDE" sW_HIDE :: ShowWindowControl
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sW_SHOWNORMAL" sW_SHOWNORMAL :: ShowWindowControl
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sW_SHOWMINIMIZED" sW_SHOWMINIMIZED :: ShowWindowControl
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sW_SHOWMAXIMIZED" sW_SHOWMAXIMIZED :: ShowWindowControl
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sW_MAXIMIZE" sW_MAXIMIZE :: ShowWindowControl
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sW_SHOWNOACTIVATE" sW_SHOWNOACTIVATE :: ShowWindowControl
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sW_SHOW" sW_SHOW :: ShowWindowControl
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sW_MINIMIZE" sW_MINIMIZE :: ShowWindowControl
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sW_SHOWMINNOACTIVE" sW_SHOWMINNOACTIVE :: ShowWindowControl
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sW_SHOWNA" sW_SHOWNA :: ShowWindowControl
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_sW_RESTORE" sW_RESTORE :: ShowWindowControl

showWindow :: HWND -> ShowWindowControl -> IO Bool
showWindow arg1 arg2 =
  prim_showWindow arg1 arg2
  >>= \  res1  ->
  (unmarshall_bool_ res1) >>= \ gc_res1 ->
  (return (gc_res1))
foreign import  ccall "Win32Window_stub_ffi.h prim_showWindow" prim_showWindow :: Addr -> Word32 -> IO (Int)

----------------------------------------------------------------
-- Misc
----------------------------------------------------------------

adjustWindowRect :: RECT -> WindowStyle -> Bool -> IO RECT
adjustWindowRect gc_arg1 arg2 gc_arg7 =
  case gc_arg1 of { (gc_arg2,gc_arg3,gc_arg4,gc_arg5) ->
  (marshall_bool_ gc_arg7) >>= \ (arg3) ->
  prim_adjustWindowRect gc_arg2 gc_arg3 gc_arg4 gc_arg5 arg2 arg3
  >>= \ gc_result ->
  access_prim_adjustWindowRect_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_adjustWindowRect_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_adjustWindowRect_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_adjustWindowRect_gc_res4 (gc_result :: Addr) >>= \ gc_res4 ->
  access_prim_adjustWindowRect_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_adjustWindowRect_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return ((gc_res1,gc_res2,gc_res3,gc_res4)))}
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_adjustWindowRect" prim_adjustWindowRect :: Int32 -> Int32 -> Int32 -> Int32 -> Word32 -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_adjustWindowRect_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_adjustWindowRect_gc_res2 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_adjustWindowRect_gc_res3 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_adjustWindowRect_gc_res4 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_adjustWindowRect_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_adjustWindowRect_gc_failstring :: Addr -> IO (Addr)

adjustWindowRectEx :: RECT -> WindowStyle -> Bool -> WindowStyleEx -> IO RECT
adjustWindowRectEx gc_arg1 arg2 gc_arg7 arg4 =
  case gc_arg1 of { (gc_arg2,gc_arg3,gc_arg4,gc_arg5) ->
  (marshall_bool_ gc_arg7) >>= \ (arg3) ->
  prim_adjustWindowRectEx gc_arg2 gc_arg3 gc_arg4 gc_arg5 arg2 arg3 arg4
  >>= \ gc_result ->
  access_prim_adjustWindowRectEx_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_adjustWindowRectEx_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_adjustWindowRectEx_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_adjustWindowRectEx_gc_res4 (gc_result :: Addr) >>= \ gc_res4 ->
  access_prim_adjustWindowRectEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_adjustWindowRectEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return ((gc_res1,gc_res2,gc_res3,gc_res4)))}
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_adjustWindowRectEx" prim_adjustWindowRectEx :: Int32 -> Int32 -> Int32 -> Int32 -> Word32 -> Int -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_adjustWindowRectEx_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_adjustWindowRectEx_gc_res2 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_adjustWindowRectEx_gc_res3 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_adjustWindowRectEx_gc_res4 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_adjustWindowRectEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_adjustWindowRectEx_gc_failstring :: Addr -> IO (Addr)

-- Win2K and later:
-- %fun AllowSetForegroundWindow :: DWORD -> IO ()

-- %
-- %dis animateWindowType x = dWORD x
-- type AnimateWindowType   = DWORD

-- %const AnimateWindowType
--        [ AW_SLIDE
--        , AW_ACTIVATE
--        , AW_BLEND
--        , AW_HIDE
--        , AW_CENTER
--        , AW_HOR_POSITIVE
--        , AW_HOR_NEGATIVE
--        , AW_VER_POSITIVE
--        , AW_VER_NEGATIVE
--        ]

-- Win98 or Win2K:
-- %fun AnimateWindow :: HWND -> DWORD -> AnimateWindowType -> IO ()
-- %code BOOL success = AnimateWindow(arg1,arg2,arg3)
-- %fail { !success } { ErrorWin("AnimateWindow") }

anyPopup :: IO Bool
anyPopup =
  prim_anyPopup
  >>= \  res1  ->
  (unmarshall_bool_ res1) >>= \ gc_res1 ->
  (return (gc_res1))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_anyPopup" prim_anyPopup :: IO (Int)

arrangeIconicWindows :: HWND -> IO ()
arrangeIconicWindows arg1 =
  prim_arrangeIconicWindows arg1
  >>= \ gc_result ->
  access_prim_arrangeIconicWindows_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_arrangeIconicWindows_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_arrangeIconicWindows" prim_arrangeIconicWindows :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_arrangeIconicWindows_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_arrangeIconicWindows_gc_failstring :: Addr -> IO (Addr)

beginDeferWindowPos :: Int -> IO HDWP
beginDeferWindowPos arg1 =
  prim_beginDeferWindowPos arg1
  >>= \ gc_result ->
  access_prim_beginDeferWindowPos_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_beginDeferWindowPos_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_beginDeferWindowPos_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_beginDeferWindowPos" prim_beginDeferWindowPos :: Int -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_beginDeferWindowPos_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_beginDeferWindowPos_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_beginDeferWindowPos_gc_failstring :: Addr -> IO (Addr)

bringWindowToTop :: HWND -> IO ()
bringWindowToTop arg1 =
  prim_bringWindowToTop arg1
  >>= \ gc_result ->
  access_prim_bringWindowToTop_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_bringWindowToTop_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall "Win32Window_stub_ffi.h prim_bringWindowToTop" prim_bringWindowToTop :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_bringWindowToTop_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_bringWindowToTop_gc_failstring :: Addr -> IO (Addr)
